--- a/gkeys.html
+++ b/gkeys.html
@@ -62,8 +62,61 @@
     </div>
     <div class="content">
         <h3>I don't test all of these, I just try to get them out as quickly as possible.</h3>
-        <h2>Android Wear 1.0.4.1611133</h2>
-        <p><code>cw:companion_logging_enabled<br>cw:disable_companion_hotword<br>cw:companion_tutorial_youtube_video_id<br>cw:home_logging_enabled<br>cw:time_sync_period_ms<br>cw:time_sync_max_latency_ms<br>cw:default_vibration_pattern<br>cw:disable_unread_ui<br>cw:disable_unread_ranking<br>cw:package_ranking<br>cw:package_ranking_separator<br>cw:package_ranking_unknown_package<br>cw:follow_on_supported_languages<br>cw:follow_on_supported_locales<br>cw:enable_incoming_call_while_charging<br>cw:browse_wear_apps_url<br>cw:enable_multinode_ui<br>cw:notification_time_tracking_write_throttle_ms<br>cw:notification_time_tracking_duration_ms<br>cw:stream_audit_enabled<br>cw:stream_audit_interval_ms<br>cw:stream_audit_log_entry_count<br>cw:stream_audit_failure_count_to_notify<br>cw:notif_sync_stopped_warning_enabled<br>cw:calendar_app_packages<br>cw:battery_notification_high_threshold<br>cw:battery_notification_low_threshold<br>cw:gesture_control_enabled<br>cw:show_mute_actions_on_dismissable_notifications</code>
+<h2>Android Wear 1.0.4.1611133</h2>
+<p><code>cw:companion_logging_enabled<br>
+cw:disable_companion_hotword<br>
+cw:companion_tutorial_youtube_video_id<br>
+cw:home_logging_enabled<br>
+cw:time_sync_period_ms<br>
+cw:time_sync_max_latency_ms<br>
+cw:default_vibration_pattern<br>
+cw:disable_unread_ui<br>
+cw:disable_unread_ranking<br>
+cw:package_ranking<br>
+cw:package_ranking_separator<br>
+cw:package_ranking_unknown_package<br>
+cw:follow_on_supported_languages<br>
+cw:follow_on_supported_locales<br>
+cw:enable_incoming_call_while_charging<br>
+cw:browse_wear_apps_url<br>
+cw:enable_multinode_ui<br>
+cw:notification_time_tracking_write_throttle_ms<br>
+cw:notification_time_tracking_duration_ms<br>
+cw:stream_audit_enabled<br>
+cw:stream_audit_interval_ms<br>
+cw:stream_audit_log_entry_count<br>
+cw:stream_audit_failure_count_to_notify<br>
+cw:notif_sync_stopped_warning_enabled<br>
+cw:calendar_app_packages<br>
+cw:battery_notification_high_threshold<br>
+cw:battery_notification_low_threshold<br>
+cw:gesture_control_enabled<br>
+cw:show_mute_actions_on_dismissable_notifications</code>
+
+
+<h2>Google Fit 1.51.07-000</h2>
+<p><code>fitness.fit_app_min_supported_version<br>
+fitness.fit_app_reverse_geocode_in_session_loader<br>
+fitness.fit_app_api_url_host_name<br>
+fitness.fit_app_api_url_path_prefix<br>
+fitness.fit_app_api_trace_token<br>
+fitness.fit_app_session_min_sync_duration_ms<br>
+fitness.fit_app_ble_pairing<br>
+fitness.fit_app_session_sync_days_back<br>
+fitness.fit_app_session_sync_days<br>
+fitness.fit_app_show_debug_menu<br>
+fitness.fit_app_play_store_url<br>
+fitness.fit_app_show_distance_in_1p_session_details<br>
+fitness.fit_app_show_upload_db_menu<br>
+fitness.fit_app_tos_url_pattern<br>
+fitness.fit_app_privacy_url<br>
+fitness.fit_app_korean_tos_url<br>
+fitness.fit_app_remote_session_end_at_midnight<br>
+fitness.is_internal_user<br>
+fitness.fit_app_show_static_maps_in_session_details<br>
+fitness.micro.account.show_debug_settings</code>
+
+
 <p><h2>Google Play Services 6.5.96</h2><p><code>gms:common:allow_pii_logging<br>
 gms:common:system_health_log_delay_after_install_millis<br>
 gms:common:ignored_packages_for_logging<br>
