--- a/hidden/clickjack.html
+++ b/hidden/clickjack.html
@@ -25,6 +25,6 @@
     </style>
   </head>
   <body>
-    <iframe src="https://id.avast.com" height="700" width="1000"></iframe>
+    <iframe src="https://login.norton.com" height="700" width="1000"></iframe>
   </body>
 </html>
