--- a/hidden/clickjack.html
+++ b/hidden/clickjack.html
@@ -23,6 +23,8 @@
         width:100%;
         /* Use absolute positioning to line up update button with fake button */
         position: absolute;
+        top: 0px;		
+        left: 0px;
         z-index: 2;
         /* Hide from view */
         -moz-opacity: 0.5;
