--- a/hidden/clickjack.html
+++ b/hidden/clickjack.html
@@ -46,7 +46,7 @@
       }
     </style>
   </head>
-  <body>
+  <body onload="alert('Warning: This is just a demo. This is not the actual login site.');">
     <table>
     <!--<tr><td class="header"><div><h1>Header</h1></div></td></tr>-->
     <tr><td class="content"><iframe src="https://floridapolytechnic.org/pulse-login/"></iframe></td></tr>
